# team-project-rustations2

./: docker-compose.yml
backend/: .env  Cargo.toml  Dockerfile  README.md  commands  docker-commands  docker-compose.yml
backend/migrations/2023-05-03-201844_todo/: down.sql  up.sql
backend/migrations/2023-05-20-114258_create_agendas/: down.sql  up.sql
backend/migrations/2023-05-22-211704_create_tasks/: up.sql
backend/nginx/: Dockerfile  nginx.conf
backend/src/: cors.rs  endpoints.rs  main.rs  model.rs  models.rs  rabbit.rs  repository.rs  schema.rs  service.rs
backend/src/dtos/: agenda.rs  mod.rs  task.rs  todo.rs
backend/src/endpoints/: endpoints.rs  mod.rs
backend/src/models/: agenda.rs  models.rs
backend/src/repository/: agenda_repository.rs  mod.rs  task_repository.rs  todo_repository.rs
frontend/: README.md  package-lock.json  package.json
frontend-rust/yew-app/: Cargo.toml
frontend-rust/yew-app/src/: index.html  main.rs
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/pages/: Agenda.tsx  Deadlines.tsx  Home.tsx  News.tsx  Todos.tsx
frontend/src/store/: agenda.tsx  baseapi.tsx  news.tsx  todos.tsx
frontend/src/store/middleware/: api.tsx
rabbit_mom/: .env  Cargo.toml  Dockerfile  docker-compose.yml
rabbit_mom/migrations/2023-05-22-211755_create_tasks/: up.sql
rabbit_mom/src/: main.rs  rabbit.rs  schema.rs
rabbit_mom/src/dtos/: mod.rs  news.rs  task.rs
rabbit_mom/src/models/: mod.rs  models.rs  tasks.rs
rabbit_mom/src/repository/: connection.rs  task_repository.rs  todo_repository.rs
