[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "macros" ] }
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }