[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.0", features = ["postgres", "extras", "chrono"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "macros" ] }
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15.7"
log = "0.4.17"
chrono = { version= "0.4.24", features = ["serde", "rustc-serialize"]}
reqwest = "0.11.18"
select = "0.6.0"
lapin = "1.8.0"
deadpool = "0.9.5"
warp = "0.3.1"
futures = { version = "0.3.17", default-features = true }
tokio-amqp = "1.0.0"
thiserror = "1.0.30"
deadpool-lapin = "0.9.0"